--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,15 +7,15 @@ pool:
 
 
 steps:
-- task: gattjoe.VeracodeScaAdoExtension.custom-build-release-task.VeracodeCommunityScaAdoExtension@1
-  displayName: 'Veracode SCA Agent Scan - dotnet'
+- task: VeracodeCommunityScaAdoExtension@1
   inputs:
-    scanType: url
-    scanTarget: 'https://github.com/srcclr/example-dotnet'
-    appName: dotnet
-    minCVSS: 0
+    scanType: 'directory'
+    scanTarget: './'
+    appName: 'Verademo'
+    minCVSS: '0'
   env:
     SRCCLR_API_TOKEN: $(SCA_TOKEN)
+
 
 - task: CmdLine@2
   name: SCAScan
