--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: | 
-          $SCA_JSON = Get-Content '${{parameters.sca_output}}'
+          $SCA_JSON = Get-Content 'sca_output.json'
           $TEMP_OUTPUT = $SCA_JSON | ConvertFrom-Json
           $TEMP_OUTPUT = $TEMP_OUTPUT.records.vulnerabilities
           $TEMP_OUTPUT = $TEMP_OUTPUT | ConvertTo-Json -Depth 10 -Compress
