--- a/Veracode-Scans.yml
+++ b/Veracode-Scans.yml
@@ -31,8 +31,8 @@ steps:
 - task: Veracode@3
   inputs:
     ConnectionDetailsSelection: 'Credentials'
-    apiId: '$(VID)'
-    apiKey: '$(VKEY)'
+    apiId: '$(VKEY)'
+    apiKey: '$(VID)'
     veracodeAppProfile: 'Verademo ADO'
     version: '$(build.buildNumber)'
     filepath: './target/verademo.war'
