--- a/Veracode-Scans.yml
+++ b/Veracode-Scans.yml
@@ -32,8 +32,8 @@ steps:
   condition: false
   inputs:
     ConnectionDetailsSelection: 'Credentials'
-    apiId: '$env:VID'
-    apiKey: '$env:VKEY'
+    apiId: '$VID'
+    apiKey: '$VKEY'
     veracodeAppProfile: 'Verademo ADO'
     version: '$(build.buildNumber)'
     filepath: './target/verademo.war'
@@ -50,4 +50,4 @@ steps:
     script: |
       curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
       unzip pipeline-scan-LATEST.zip
-      java -jar pipeline-scan.jar --veracode_api_id $env:VID --veracode_api_key $env:VKEY --file ./target/verademo.war --fail_on_severity="Very High, High"
+      java -jar pipeline-scan.jar --veracode_api_id $VID --veracode_api_key $VKEY --file ./target/verademo.war --fail_on_severity="Very High, High"
