--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,12 +15,13 @@ steps:
     script: 'curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh > sca_output.json'
 
 - task: PowerShell@2
+  name: ReadJsonFile
   inputs:
     targetType: 'inline'
     script: |
       $SCA_OUTPUT=Get-Content 'sca_output.json'
-      Write-Host ##vso[task.setvariable variable=SCA_OUTPUT]$SCA_OUTPUT
+      Write-Host "##vso[task.setvariable variable=SCA_CONTENT;isOutput=true]$SCA_OUTPUT"
 
 - template : CreateWorkItems.yml
   parameters:
-    sca_content: $(SCAScan.SCA_OUTPUT)
+    sca_content: "$(ReadJsonFile.SCA_CONTENT)"
