--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,12 +19,13 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      $SCA_OUTPUT=Get-Content 'sca_output.json'
-      $SCA_OUTPUT=ConvertTo-Json $SCA_OUTPUT
-      $SCA_OUTPUT=$SCA_OUTPUT.records.vulnerabilities
-      $SCA_OUTPUT=ConvertFrom-Json $SCA_OUTPUT
-      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_OUTPUT"
-      $SCA_OUTPUT=""
+      $SCA_JSON = Get-Content 'sca_output.json'
+      $SCA_JSON = $SCA_JSON | ConvertFrom-Json
+      $SCA_JSON = $SCA_JSON.records.vulnerabilities
+      $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10
+      echo Vulnerabilities on temp: $SCA_JSON
+      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_JSON"
+      $SCA_JSON=""
 
 - template : CreateWorkItems.yml
   parameters:
