--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
       $SCA_JSON = Get-Content 'sca_output.json'
       $SCA_JSON = $SCA_JSON | ConvertFrom-Json
       $SCA_JSON = $SCA_JSON.records.vulnerabilities
-      $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10
+      $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10 -Compress
       echo Vulnerabilities on temp: $SCA_JSON
       Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_JSON"
 
