--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,15 +22,14 @@ steps:
       $SCA_JSON = Get-Content 'sca_output.json'
       $SCA_JSON = $SCA_JSON | ConvertFrom-Json
       $SCA_JSON = $SCA_JSON.records.vulnerabilities
-      
+      $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10 -Compress
       Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_JSON"
 
-- task: PowerShell@2
+- task: CmdLine@2
   name: OutputJson
   inputs:
-    targetType: 'inline'
     script: |
-      echo Vulnerabilties outside: "$(ReadJsonFile.VULNERABILITIES_AS_JSON)"
+      echo Vulnerabilties As Json: $(ReadJsonFile.VULNERABILITIES_AS_JSON)
 
 - template : CreateWorkItems.yml
   parameters:
