--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -8,7 +8,7 @@ steps:
       echo "I am Inside"
       sca_json="${{ parameters.sca_content }}"
       echo sca_json: $sca_json
-      vulnerabilities=$( jq -r  '.[]' <<< "${sca_json}" ) 
+      vulnerabilities=($( jq -r  '.[]' <<< "${sca_json}" ))
       echo vulnerabilities: $vulnerabilities
       for vulnerability in $vulnerabilities; do
       	echo $vulnerability
