--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -7,8 +7,9 @@ steps:
     script: |
       echo "I am Inside"
       sca_json="${{ parameters.sca_content }}"
-      echo sca_json: $sca_json
+      echo "sca_json: $sca_json"
       vulnerabilities=($( jq -r  '.[]' <<< "${sca_json}" ))
+      echo "${vulnerabilities[@]}"
       echo vulnerabilities: $vulnerabilities
       for vulnerability in $vulnerabilities; do
       	echo $vulnerability
