--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -5,8 +5,9 @@ steps:
 - task: CmdLine@2
   inputs:
     script: |
-      sca_json=${{ parameters.vulnerabilities_as_json }}
-      echo "sca_json: $sca_json"
+      sca_json='${{ replace(parameters.vulnerabilities_as_json, "'", "" }}'
+      echo sca_json:
+      echo $sca_json
       vulnerabilities=($( jq -r  '.[]' <<< "${sca_json}" ))
       echo "${vulnerabilities[@]}"
       echo vulnerabilities: $vulnerabilities
