--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -8,7 +8,7 @@ steps:
       sca_json='${{ parameters.vulnerabilities_as_json }}'
       vulnerabilities=($( jq -c  '.' <<< ${sca_json} ))
       vulnerabilities=()
-      while IFS='' read -r line || ! result=$line; do vulnerabilities+=("$line"); done < <(jq -r "." "$sca_json"; echo -n $?)
+      while IFS='' read -r line || ! result=$line; do vulnerabilities+=("$line"); done < <(jq -r "." $sca_json; echo -n $?)
       echo "${vulnerabilities[@]}"
       echo "${vulnerabilities[0]}"
       echo "${vulnerabilities[1]}"
