--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
     script: |
       $SCA_JSON = Get-Content 'sca_output.json'
       $SCA_JSON = $SCA_JSON | ConvertFrom-Json
-      $SCA_JSON = $SCA_JSON.records.vulnerabilities
+      $SCA_JSON = $SCA_JSON.records
       $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10 -Compress
       $SCA_JSON = $SCA_JSON.Replace("'", "")
       Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_JSON"
