--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -6,16 +6,7 @@ steps:
   inputs:
     script: |
       sca_json='${{ parameters.vulnerabilities_as_json }}'
-      vulnerabilities=($( jq -r  '.vulnerabilities[]' <<< "${sca_json}" ))
-      echo "${vulnerabilities[@]}"
-      echo "${vulnerabilities[0]}"
-      echo "${vulnerabilities[1]}"
-      echo "${vulnerabilities[2]}"
-      echo "${vulnerabilities[3]}"
-      echo "${vulnerabilities[4]}"
-      echo "${vulnerabilities[5]}"
-      echo "${vulnerabilities[6]}"
-      echo "${vulnerabilities[7]}"
-      for vulnerability in "${vulnerabilities[@]}"; do
-      	echo $vulnerability
+      for encodedVulnerability in $(echo "${sca_json}" | jq -r '.[] | @base64'); do
+        vulnerability=`${encodedVulnerability} | base64 --decode | jq -r ${1}`
+        echo $vulnerability
       done
