--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -12,7 +12,7 @@ steps:
         title=$( jq -r  '.title' <<< "${vulnerabilityAsJson}" ) 
         overview=$( jq -r  '.overview' <<< "${vulnerabilityAsJson}" ) 
         cve=$( jq -c  '.cve' <<< "${vulnerabilityAsJson}" ) 
-        link=$( jq -c  '._links[].html' <<< "${vulnerabilityAsJson}" ) 
+        link=$( jq -c  '._links[0].html' <<< "${vulnerabilityAsJson}" ) 
         
         ticketTitle="Veracode SCA - $title"
         fieldMappings="Description=<ul><li>Overview: $overview</li><li>CVE: $cve</li><li>Link: $link</li></ul>"
