--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -37,7 +37,7 @@ steps:
           "from": null,
           "value": "$description"
         }]"
-        command="curl --header 'Content-Type: application/json-patch+json' --header 'Authorization: Basic '$AUTH' --request POST --data $Body $ApiUrl"
+        command="curl --header 'Content-Type: application/json-patch+json' --header 'Authorization: Basic '$AUTH' --request POST --data '$Body' $ApiUrl"
         echo $command
         `$command`
         echo Ticket created with:
