--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -13,7 +13,6 @@ steps:
     script: |      
       ApiUrl="https://dev.azure.com/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/workitems/"'$'"${{ parameters.issue_type }}?api-version=6.0"
       Authentication="anything:$API_CREDENTIALS"
-      AUTH=$(echo -ne "anything:$API_CREDENTIALS" | base64 --wrap 0)
       
       sca_json='${{ parameters.vulnerabilities_as_json }}'
       for encodedVulnerability in $(echo "${sca_json}" | jq -r '.[] | @base64'); do
@@ -40,7 +39,7 @@ steps:
           "value": "$description"
         }]'
         echo Calling url: $ApiUrl
-        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d '$Body' $ApiUrl
+        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d '$Body' "$ApiUrl"
         echo Ticket created with:
         echo Title: $title
         echo Description: $description
