--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -39,8 +39,8 @@ steps:
           "value": "$description"
         }]'
         echo Calling url: $ApiUrl
-        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d '$Body' "$ApiUrl"
-        echo Ticket created with:
+        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' "$ApiUrl"
+        echo Ticket created.
         echo Title: $title
         echo Description: $description
         echo --------------------------
