--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -39,7 +39,9 @@ steps:
           "value": "$description"
         }]'
         echo Calling url: $ApiUrl
+        set -x
         curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d "$Body" "$ApiUrl"
+        set +x
         echo Ticket created.
         echo Title: $title
         echo Description: $description
